--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "ip": "^1.1.8",
     "node-fetch": "^3.2.10",
-    "nodemon": "^2.0.20",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "jest": "^29.1.2",
+    "supertest": "^6.3.0"
   }
 }
